# io-buffer

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md
fixtures/: 001-test-case-small-file.txt  lorem-ipsum-short.txt
include/: io-buffer.h
src/: char_stream.cpp  io_file_reader.cpp  io_file_writer.cpp  io_memory_buffer.cpp
tests/: CMakeLists.txt  tests.cpp
